Fix typos in Grants and Bug Bounty sections

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
       <div class="section-title">Build</div>
       <a href="#creator-hub" class="nav-item" data-section="creator-hub"><i class="fas fa-tools"></i><span>Creator Hub</span></a>
       <a href="#integrations" class="nav-item" data-section="integrations"><i class="fas fa-plug"></i><span>Integrations</span></a>
-      <a href="#grants" class="nav-item" data-section="grants"><i class="fas fa-dollar-sign"></i><span> bilan</a>
+      <a href="#grants" class="nav-item" data-section="grants"><i class="fas fa-dollar-sign"></i><span>Grants</a>
       <a href="#contact" class="nav-item" data-section="contact"><i class="fas fa-envelope"></i><span>Contact</span></a>
       <!-- CONTACT INFO (reduced font) -->
       <div class="nav-contact">
@@ -450,7 +450,7 @@
         <div class="section-header"><h2>Security & Audits</h2><p>Battle-tested by top firms. Transparency first.</p></div>
         <div class="security-grid">
           <div class="card"><div class="card-icon"><i class="fas fa-shield-check"></i></div><h3>Audited Parsers</h3><p>Core state machine and OLGA encoding audited by [Firm].</p></div>
-          <div class="card"><div class="card-icon"><i class="fas fa-bug"></i></div><h3>Bug Bounty</h3><p>Up to $100k for critical vulnerabilities in protocol or indexers.</p></div>
+          <div class="card"><div class="card-icon"><i class="fas fa-bug"></i></div><h3>Bug Bounty</h3><p>Earn bounties for critical vulnerabilities in protocol or indexers.</p></div>
           <div class="card"><div class="card-icon"><i class="fas fa-lock"></i></div><h3>Slashing Mechanism</h3><p>Validators lose rewards for incorrect state attestation.</p></div>
         </div>
       </section>
@@ -476,7 +476,7 @@
       <section class="grants" id="grants">
         <div class="section-header"><h2>Grants Program</h2><p>$50M in funding for builders, artists, and indexers.</p></div>
         <div class="grants-grid">
-          <div class="card"><div class="card-icon"><i class="fas fa-hand-holding-usd"></i></div><h3>Creator Grants</h3><p>Up to $100k for migration and new collections.</p></div>
+          <div class="card"><div class="card-icon"><i class="fas fa-hand-holding-usd"></i></div><h3>Creator Grants</h3><p>ACME funded for Artists and Creators migration and new collections on ARTCORE.</p></div>
           <div class="card"><div class="card-icon"><i class="fas fa-code"></i></div><h3>Dev Grants</h3><p>Build indexers, wallets, or tools. Get funded.</p></div>
           <div class="card"><div class="card-icon"><i class="fas fa-search"></i></div><h3>Validator Grants</h3><p>Run a node, earn rewards + bonus for early adopters.</p></div>
         </div>
