Update funding description in Grants section

--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
       </section>
       <!-- Grants -->
       <section class="grants" id="grants">
-        <div class="section-header"><h2>Grants Program</h2><p>$50M in funding for builders, artists, and indexers.</p></div>
+        <div class="section-header"><h2>Grants Program</h2><p>ACME funding for builders, artists, and validators.</p></div>
         <div class="grants-grid">
           <div class="card"><div class="card-icon"><i class="fas fa-hand-holding-usd"></i></div><h3>Creator Grants</h3><p>ACME funded for Artists and Creators migration and new collections on ARTCORE.</p></div>
           <div class="card"><div class="card-icon"><i class="fas fa-code"></i></div><h3>Dev Grants</h3><p>Build indexers, wallets, or tools. Get funded.</p></div>
