Update stats section in index.html

--- a/index.html
+++ b/index.html
@@ -396,10 +396,10 @@
             <a href="#partner" class="btn btn-secondary"><i class="fas fa-handshake"></i> Become a Partner</a>
           </div>
           <div class="stats">
-            <div class="stat"><div class="stat-value">$4B</div><div class="stat-label">Ordinals Volume</div></div>
+            <div class="stat"><div class="stat-value">$4B+</div><div class="stat-label">BTC NFT Volume</div></div>
             <div class="stat"><div class="stat-value">50k+</div><div class="stat-label">Bitcoin Nodes</div></div>
-            <div class="stat"><div class="stat-value">70%</div><div class="stat-label">Creators on ETH</div></div>
-            <div class="stat"><div class="stat-value">2025</div><div class="stat-label">Mainnet Launch</div></div>
+            <div class="stat"><div class="stat-value">70%+</div><div class="stat-label">Creators on ETH</div></div>
+            <div class="stat"><div class="stat-value">2026</div><div class="stat-label">Mainnet Launch</div></div>
           </div>
         </div>
       </section>
