--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -296,7 +297,7 @@
       background: var(--bg);
     }
     .wp-container, .eco-container {
-      max-width: 1000px;
+      max-width: 100%;
       margin: 0 auto;
     }
     .wp-abstract {
@@ -314,27 +315,47 @@
       gap: 8px;
       color: var(--accent);
     }
-    .wp-tabs, .eco-tabs {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
-      gap: 12px;
-      margin-bottom: 24px;
-    }
-    .wp-tablink, .eco-tablink {
-      background: var(--bg-dark);
-      border: 1px solid var(--border);
-      color: var(--text);
-      padding: 12px 16px;
-      font-size: 13px;
-      border-radius: 6px;
-      cursor: pointer;
-      transition: .2s;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 6px;
-      font-family: inherit;
-    }
+/* WHITEPAPER & ECOSYSTEM TABS – FIXED WIDTH & WRAP */
+.wp-tabs, .eco-tabs {
+  display: grid;
+  grid-template-columns: repeat( minmax(240px, 3fr));
+  gap: 12px;
+  margin-bottom: 24px;
+  overflow-x: hidden;           /* Prevent horizontal overflow */
+  padding: 0 4px;               /* Tiny padding for edge alignment */
+}
+
+.wp-tablink, .eco-tablink {
+  background: var(--bg-dark);
+  border: 1px solid var(--border);
+  color: var(--text);
+  padding: 12px 10px;
+  font-size: 12px;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: .2s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 6px;
+  font-family: inherit;
+  text-align: center;
+  word-wrap: break-word;
+  min-height: 44px;
+  overflow: hidden;
+}
+
+.wp-tablink i, .eco-tablink i {
+  font-size: 14px;
+  flex-shrink: 0;
+}
+
+.wp-tablink span, .eco-tablink span {
+  display: block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
     .wp-tablink:hover, .eco-tablink:hover {
       border-color: var(--accent);
       background: rgba(0,122,204,.1);
@@ -419,6 +440,7 @@
       .social-links{justify-content:flex-start;}
       .wp-tabs, .eco-tabs { grid-template-columns: repeat(6, 1fr); }
     }
+    
     @media (min-width:1024px){
       .partner-grid{grid-template-columns:repeat(4,1fr);}
     }
