--- a/index.html
+++ b/index.html
@@ -318,11 +318,11 @@
 /* WHITEPAPER & ECOSYSTEM TABS – FIXED WIDTH & WRAP */
 .wp-tabs, .eco-tabs {
   display: grid;
-  grid-template-columns: repeat( minmax(240px, 3fr));
+  grid-template-columns: repeat(2, 1fr);   /* 2 columns on mobile */
   gap: 12px;
   margin-bottom: 24px;
-  overflow-x: hidden;           /* Prevent horizontal overflow */
-  padding: 0 4px;               /* Tiny padding for edge alignment */
+  overflow-x: hidden;
+  padding: 0 4px;
 }
 
 .wp-tablink, .eco-tablink {
@@ -335,19 +335,27 @@
   cursor: pointer;
   transition: .2s;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 6px;
   font-family: inherit;
   text-align: center;
-  word-wrap: break-word;
-  min-height: 44px;
+  min-height: 56px;
   overflow: hidden;
 }
 
 .wp-tablink i, .eco-tablink i {
-  font-size: 14px;
+  font-size: 16px;
   flex-shrink: 0;
+}
+
+.wp-tablink span, .eco-tablink span {
+  display: block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  font-size: 11px;
 }
 
 .wp-tablink span, .eco-tablink span {
@@ -438,7 +446,21 @@
       .footer-content{grid-template-columns:2fr 1fr 1fr 1fr;text-align:left;}
       .footer-logo{justify-content:flex-start;}
       .social-links{justify-content:flex-start;}
-      .wp-tabs, .eco-tabs { grid-template-columns: repeat(6, 1fr); }
+.wp-tabs, .eco-tabs {
+    grid-template-columns: repeat(6, 1fr);   /* 6 columns on desktop */
+    gap: 16px;
+    padding: 0;
+  }
+  .wp-tablink, .eco-tablink {
+    padding: 14px 16px;
+    font-size: 13px;
+    min-height: 48px;
+    flex-direction: row;
+  }
+  .wp-tablink span, .eco-tablink span {
+    font-size: 13px;
+  }
+}
     }
     
     @media (min-width:1024px){
