--- a/index.html
+++ b/index.html
@@ -745,7 +745,7 @@
           <div id="eco-security" class="eco-tabcontent">
             <ul>
               <li><strong>Audited Core</strong>: State machine and OLGA parser by top security firms.</li>
-              <li><strong>Bug Bounty</strong>: Up to $100K for critical vulnerabilities.</li>
+              <li><strong>Bug Bounty</strong>: ACME funded for critical vulnerabilities.</li>
               <li><strong>Slashing</strong>: Validators lose rewards for dishonest state proofs.</li>
               <li><strong>Transparent Monitoring</strong>: Public dashboards for node health and attestations.</li>
             </ul>
@@ -786,7 +786,7 @@
           <!-- Grants -->
           <div id="eco-grants" class="eco-tabcontent">
             <ul>
-              <li><strong>Creator Grants</strong>: Up to $50K for migration and new collections.</li>
+              <li><strong>Creator Grants</strong>: ACME funded for migration and new collections.</li>
               <li><strong>Dev Grants</strong>: Build tools, indexers, wallets — get funded.</li>
               <li><strong>Validator Grants</strong>: Early node operators earn bonus rewards.</li>
               <li><strong>Application Portal</strong>: Open year-round with rolling reviews.</li>
