Update logo image sources to use SVG format

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -473,7 +474,7 @@
 <body>
   <!-- MOBILE HEADER -->
   <header class="mobile-header">
-    <div class="logo-mobile"><img src="https://github.com/SockIts/ACMEProtocol/blob/main/assets/ACME%20logo.png?raw=true" alt="ACME Logo"><h1>ACME</h1></div>
+    <div class="logo-mobile"><img src="https://raw.githubusercontent.com/SockIts/ACMEProtocol/385cd1427f319a9285328975afe73dd2f580ec57/assets/Logo.svg" alt="ACME Logo"><h1>ACME</h1></div>
     <div class="hamburger" id="hamburger"><span></span><span></span><span></span></div>
   </header>
 
@@ -481,7 +482,7 @@
   <div class="layout">
     <!-- FIXED SIDEBAR -->
     <aside class="sidebar" id="sidebar">
-      <div class="logo"><h1><img src="https://github.com/SockIts/ACMEProtocol/blob/main/assets/ACME%20logo.png?raw=true" alt="ACME Logo"> ACME</h1></div>
+      <div class="logo"><h1><img src="https://raw.githubusercontent.com/SockIts/ACMEProtocol/385cd1427f319a9285328975afe73dd2f580ec57/assets/Logo.svg" alt="ACME Logo"> ACME</h1></div>
       <div class="section-title">Explorer</div>
       <a href="#" class="nav-item active" data-section="hero"><i class="fas fa-home"></i><span>Home</span></a>
       <a href="#whitepaper" class="nav-item" data-section="whitepaper"><i class="fas fa-file-alt"></i><span>Whitepaper</span></a>
@@ -905,7 +906,7 @@
       <footer class="footer">
         <div class="footer-content">
           <div>
-            <div class="footer-logo"><img src="https://github.com/SockIts/ACMEProtocol/blob/main/assets/ACME%20logo.png?raw=true" alt="ACME Logo"> ACME Protocol</div>
+            <div class="footer-logo"><img src="https://raw.githubusercontent.com/SockIts/ACMEProtocol/385cd1427f319a9285328975afe73dd2f580ec57/assets/Logo.svg" alt="ACME Logo"> ACME Protocol</div>
             <p>Art Coded on the Monetary Engine: Permanent, verifiable art on Bitcoin's backbone.</p><br>
             <div class="social-links">
               <a href="#"><i class="fab fa-twitter"></i></a>
