Adjust logo image size and markup in index.html

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     position:fixed;top:0;left:0;right:0;z-index:1000;
   }
   .logo-mobile h1{font-size:18px;font-weight:700;color:#fff;display:flex;align-items:center;gap:8px;}
-  .logo-mobile img{width:25px;height:auto;}
+  .logo-mobile img{width:35px;height:auto;}
   .hamburger{width:24px;height:44px;display:flex;flex-direction:column;justify-content:center;align-items:center;cursor:pointer;gap:4px;}
   .hamburger span{width:25px;height:2px;background:var(--text);border-radius:1px;transition:.3s;}
   .hamburger.active span:nth-child(1){transform:rotate(45deg) translate(5px,5px);}
@@ -72,7 +72,7 @@
   .sidebar.open{left:0;}
   .logo{padding:0 20px 20px;border-bottom:1px solid var(--border);margin-bottom:20px;}
   .logo h1{font-size:18px;font-weight:700;color:#fff;display:flex;align-items:center;gap:10px;}
-  .logo img{width:30px;height:auto;}
+  .logo img{width:35px;height:auto;}
   .nav-item{
     padding:12px 20px;cursor:pointer;transition:.2s;
     display:flex;align-items:center;gap:12px;font-size:14px;color:#fff;
@@ -474,7 +474,7 @@
 <body>
   <!-- MOBILE HEADER -->
   <header class="mobile-header">
-    <div class="logo-mobile"><img src="https://raw.githubusercontent.com/SockIts/ACMEProtocol/385cd1427f319a9285328975afe73dd2f580ec57/assets/Logo.svg" alt="ACME Logo"><h1>ACME</h1></div>
+      <div class="logo-mobile"><h1><img src="https://raw.githubusercontent.com/SockIts/ACMEProtocol/385cd1427f319a9285328975afe73dd2f580ec57/assets/Logo.svg" alt="ACME Logo"> ACME</h1></div>
     <div class="hamburger" id="hamburger"><span></span><span></span><span></span></div>
   </header>
 
