Update interoperability description and storage method

--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
             <div class="card-icon"><i class="fas fa-paint-brush"></i></div><h3>Artist-Centered UX</h3><p>Simple minting tools with tiered storage: UTXO for permanence, IPFS for efficiency. No Merkle trees for creators—just click and own.</p></div>
           <div class="card">
             <img src="https://specials-images.forbesimg.com/imageserve/640b6922875f52d9e07aa269/960x0.jpg" alt="NFT Illustration" class="card-image">
-            <div class="card-icon"><i class="fas fa-link"></i></div><h3>Ecosystem Interoperability</h3><p>Seamless bridges to Ordinals, Runes, Stamps, and Counterparty. One protocol, many assets.</p></div>
+            <div class="card-icon"><i class="fas fa-link"></i></div><h3>Ecosystem Interoperability</h3><p>Seamless bridges from Ordinals, Runes, Stamps, and Counterparty with verifiable proof of burns. One protocol, many assets.</p></div>
         </div>
       </section>
 
@@ -592,7 +592,7 @@
               <li>ACME is a Bitcoin-native metaprotocol for digital art, addressing fragmentation, verifiability, and permanence issues in existing BTC NFT solutions.</li>
               <li>Utilizes OLGA chunking for UTXO-based storage, Sparse Merkle Trees for proofs, and Canonical State Roots for deterministic verifiability.</li>
               <li>Incentivizes validators through mineable-UTXO rewards and slashing, turning indexing into a permissionless economic game.</li>
-              <li>Provides artist-friendly tools with tiered storage (UTXO/IPFS) and seamless interoperability with Ordinals, Runes, Stamps, and Counterparty.</li>
+              <li>Provides artist-friendly tools with tiered storage (UTXO to IPFS) and seamless interoperability with Ordinals, Runes, Stamps, and Counterparty.</li>
               <li>Testnet live; mainnet targeted for 2026, with grants for creators and developers.</li>
             </ul>
           </div>
