--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
 
       <!-- WHITEPAPER -->
       <section class="whitepaper" id="whitepaper">
-        <div class="section-header"><h2>Overview</h2><p>Deep dive into the ACME architecture, security model, and economic design.</p></div>
+        <div class="section-header"><h2>White Paper Overview</h2><p>Deep dive into the ACME architecture, security model, and economic design.</p></div>
 
         <div class="wp-container">
           <div class="wp-tabs">
@@ -700,7 +700,7 @@
       <!-- TECHNICAL & ECOSYSTEM OVERVIEW -->
       <section class="ecosystem" id="ecosystem">
         <div class="section-header">
-          <h2>Technical & Ecosystem Overview</h2>
+          <h2>Technical & Ecosystem</h2>
           <p>Everything you need to build, create, and scale on ACME — in one place.</p>
         </div>
 
