Update contact info and remove general inquiries section

--- a/index.html
+++ b/index.html
@@ -494,17 +494,10 @@
       <!-- CONTACT INFO -->
       <div class="nav-contact">
         <div class="contact-block">
-          <h5><i class="fas fa-dollar-sign"></i> Investment Inquiries</h5>
+          <h5><i class="fas fa-dollar-sign"></i> Investment/Partner Inquiries</h5>
           <ul>
-            <li><i class="fas fa-envelope"></i> <a href="mailto:invest@acmeprotocol.com">invest@acmeprotocol.com</a></li>
-            <li><i class="fab fa-telegram"></i> <a href="https://t.me/ACMEInvestorGroup" target="_blank">@ACMEInvestorGroup</a></li>
-          </ul>
-        </div>
-        <div class="contact-block">
-          <h5><i class="fas fa-question-circle"></i> General Inquiries</h5>
-          <ul>
-            <li><i class="fas fa-envelope"></i> <a href="mailto:hello@acmeprotocol.com">hello@acmeprotocol.com</a></li>
-            <li><i class="fab fa-discord"></i> <a href="https://discord.gg/acmeprotocol" target="_blank">discord.gg/acmeprotocol</a></li>
+            <li><i class="fas fa-envelope"></i> <a href="mailto:invest@acmeprotocol.com">support@acmeprotocol.com</a></li>
+
           </ul>
         </div>
         <div class="contact-block">
@@ -910,10 +903,9 @@
             <p>Art Coded on the Monetary Engine: Permanent, verifiable art on Bitcoin's backbone.</p><br>
             <div class="social-links">
               <a href="#"><i class="fab fa-twitter"></i></a>
+              <a href="#"><i class="fas fa-globe"></i></a>
               <a href="#"><i class="fab fa-github"></i></a>
-              <a href="#"><i class="fab fa-discord"></i></a>
-              <a href="#"><i class="fab fa-telegram"></i></a>
-              <a href="#"><i class="fab fa-medium"></i></a>
+
             </div>
           </div>
           <div><h4>Creators</h4><ul><li><a href="#ecosystem">Minting Guide</a></li><li><a href="#ecosystem">Storage Tiers</a></li><li><a href="#ecosystem">Migration Tools</a></li><li><a href="#ecosystem">ARTCORE Curation</a></li><li><a href="#ecosystem">Grants Program</a></li></ul></div>
