--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
   }
   .btn-primary{background:var(--accent);color:#fff;border:none;}
   .btn-primary:hover{background:var(--accent-hover);transform:translateY(-1px);}
-  .btn-secondary{background:transparent;color:var(--text);border:1px solid var(--border);}
+  .btn-secondary{background:transparent;color:var(--text);border:5px solid var(--border);}
   .btn-secondary:hover{border-color:var(--accent);color:var(--accent);}
   .stats{
     display:flex;flex-wrap:wrap;justify-content:center;gap:20px;margin-top:40px;
@@ -530,6 +530,9 @@
           <div class="cta-buttons">
             <a href="#ecosystem" class="btn btn-primary"><i class="fas fa-cubes"></i> Explore Ecosystem</a>
             <a href="#partner" class="btn btn-secondary"><i class="fas fa-handshake"></i> Become a Partner</a>
+            <a href="#partner" class="btn btn-secondary"><i class="fas fa-scroll"></i> Request White Paper</a>            
+            
+            
           </div>
           <div class="stats">
             <div class="stat"><div class="stat-value">$4B+</div><div class="stat-label">BTC NFT Volume</div></div>
