Update partner and white paper links to contact

--- a/index.html
+++ b/index.html
@@ -529,8 +529,8 @@
           <p class="subtitle">Art Coded on the Monetary Engine: The Bitcoin-native metaprotocol solving fragmentation, verifiability, and permanence for digital art.</p>
           <div class="cta-buttons">
             <a href="#ecosystem" class="btn btn-primary"><i class="fas fa-cubes"></i> Explore Ecosystem</a>
-            <a href="#partner" class="btn btn-secondary"><i class="fas fa-handshake"></i> Become a Partner</a>
-            <a href="#partner" class="btn btn-secondary"><i class="fas fa-scroll"></i> Request White Paper</a>            
+            <a href="#contact" class="btn btn-secondary"><i class="fas fa-handshake"></i> Become a Partner</a>
+            <a href="#contact" class="btn btn-secondary"><i class="fas fa-scroll"></i> Request White Paper</a>            
             
             
           </div>
