--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
         <div class="contact-block">
           <h5><i class="fas fa-dollar-sign"></i> Investment/Partner Inquiries</h5>
           <ul>
-            <li><i class="fas fa-envelope"></i> <a href="mailto:invest@acmeprotocol.com">support@acmeprotocol.com</a></li>
+            <li><i class="fas fa-envelope"></i> <a href="mailto:support@acmeprotocol.com">support@acmeprotocol.com</a></li>
 
           </ul>
         </div>
