--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     .close-tab:hover{opacity:1;}
     /* ---------- HERO ---------- */
     .hero{
-      max-height:calc(50vh - var(--mobile-menu-height));
+      max-height:calc(50vh);
       padding:40px 20px 60px;
       background:url('https://thumbs.dreamstime.com/b/chaotic-bitcoin-explosion-colors-abstract-energy-background-331555936.jpg') no-repeat center center/cover;
       position:relative;overflow:hidden;text-align:center;
