--- a/index.html
+++ b/index.html
@@ -155,14 +155,15 @@
       display:flex;flex-direction:column;align-items:center;gap:12px;margin-bottom:40px;
     }
     .btn{
-      padding:14px 20px;border-radius:4px;font-weight:600;font-size:15px;cursor:pointer;
+      padding:10px 15px;border-radius:4px;font-weight:600;font-size:15px;cursor:pointer;
       transition:.2s;display:inline-flex;align-items:center;justify-content:center;gap:8px;
       text-decoration:none;min-height:48px;width:100%;max-width:280px;
     }
     .btn-primary{background:var(--accent);color:#000;border:none;}
     .btn-primary:hover{background:var(--accent-hover);transform:translateY(-1px);}
-    .btn-secondary{background:transparent;color:var(--text);border:5px solid var(--border);}
+    .btn-secondary{background:transparent;color:var(--text);border:3px solid var(--border);}
     .btn-secondary:hover{border-color:var(--accent);color:var(--accent);}
+    
     .stats{
       display:flex;flex-wrap:wrap;justify-content:center;gap:20px;margin-top:40px;
     }
@@ -182,7 +183,7 @@
     }
     .section-header p{color:var(--text-muted);max-width:600px;margin:auto;font-size:15px;}
     .features-grid,.partner-grid{
-      display:grid;grid-template-columns:1fr;gap:20px;margin-top:32px;
+      display:grid;grid-template-columns:1fr;gap:20px;margin-top:32px;text-align:center;
     }
     .card,.partner-card{
       background:var(--bg-dark);border:1px solid var(--border);border-radius:8px;
@@ -197,7 +198,7 @@
       display:flex;align-items:center;justify-content:center;margin-bottom:16px;
       font-size:18px;color:#000;
     }
-    .partner-icon{background:none;width:auto;height:auto;font-size:36px;margin-bottom:20px;}
+    .partner-icon{background:none;width:auto;height:auto;font-size:30px;margin-bottom:20px;}
     .card h3,.partner-card h3{font-size:18px;margin-bottom:10px;}
     .card p,.partner-card p{font-size:14px;color:var(--text-muted);}
     .partner-card .btn{margin:16px auto 0;}
