Fix wording in Ecosystem Interoperability section

--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
             <div class="card-icon"><i class="fas fa-paint-brush"></i></div><h3>Artist-Centered UX</h3><p>Simple minting tools with tiered storage: UTXO for permanence, Arweave for efficiency. No Merkle trees for creators—just click and own.</p></div>
           <div class="card">
             <img src="https://specials-images.forbesimg.com/imageserve/640b6922875f52d9e07aa269/960x0.jpg" alt="NFT Illustration" class="card-image">
-            <div class="card-icon"><i class="fas fa-link"></i></div><h3>Ecosystem Interoperability</h3><p>Seamless bridges to Ordinals, Runes, Stamps, and Counterparty. One protocol, many assets.</p></div>
+            <div class="card-icon"><i class="fas fa-link"></i></div><h3>Ecosystem Interoperability</h3><p>Seamless bridges from Ordinals, Runes, Stamps, and Counterparty. One protocol, many assets.</p></div>
         </div>
       </section>
       <!-- WHITEPAPER -->
