--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     .hero{
       max-height:calc(60vh);
       padding:10px 20px 20px;
-      background:url('https://thumbs.dreamstime.com/b/chaotic-bitcoin-explosion-colors-abstract-energy-background-331555936.jpg') no-repeat center center/cover;
+      background:url('https://github.com/SockIts/ACMEProtocol/blob/main/assets/Landing%20Hero%20Banner.webp?raw=true') no-repeat center center/cover;
       position:relative;overflow:hidden;text-align:center;
     }
     .hero::before{
