Update footer structure and content in index.html

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -661,10 +662,10 @@
       <section class="partnership" id="partner">
         <div class="section-header"><h2>Join the ACME Ecosystem</h2><p>Partner with us to unify Bitcoin's art landscape: Artists, developers, galleries, and institutions.</p></div>
         <div class="partner-grid">
-          <div class="partner-card"><div class="partner-icon"><i class="fas fa-palette"></i></div><h3>Artists & Creators</h3><p>Migrate from Ethereum or other protocols with grants. Use ARTCORE for curation and white-glove onboarding.</p><a href="#ecosystem" class="btn btn-secondary"><i class="fas fa-arrow-right"></i> Apply for Grants</a></div>
-          <div class="partner-card"><div class="partner-icon"><i class="fas fa-code"></i></div><h3>Developers & Builders</h3><p>Open-source indexers in Rust/Go, SDKs, test vectors. Build wallets, marketplaces, and tools on our deterministic state.</p><a href="#ecosystem" class="btn btn-secondary"><i class="fas fa-arrow-right"></i> Get SDK</a></div>
-          <div class="partner-card"><div class="partner-icon"><i class="fas fa-university"></i></div><h3>Galleries & Institutions</h3><p>Enterprise APIs for provenance, curation slots in ARTCORE, museum-grade verification for collections.</p><a href="#ecosystem" class="btn btn-secondary"><i class="fas fa-arrow-right"></i> Integrate APIs</a></div>
-          <div class="partner-card"><div class="partner-icon"><i class="fas fa-handshake"></i></div><h3>Wallet & Marketplace Partners</h3><p>Integrate with UniSat/Xverse forks. Offer DEX, royalties, and verifiable state to your users.</p><a href="#ecosystem" class="btn btn-secondary"><i class="fas fa-arrow-right"></i> Partner Up</a></div>
+          <div class="partner-card"><div class="partner-icon"><i class="fas fa-palette"></i></div><h3>Artists & Creators</h3><p>Migrate from Ethereum or other protocols with grants. Use ARTCORE for curation and white-glove onboarding.</p><a href="#contact" class="btn btn-secondary"><i class="fas fa-arrow-right"></i> Apply for Grants</a></div>
+          <div class="partner-card"><div class="partner-icon"><i class="fas fa-code"></i></div><h3>Developers & Builders</h3><p>Open-source indexers in Rust/Go, SDKs, test vectors. Build wallets, marketplaces, and tools on our deterministic state.</p><a href="#contact" class="btn btn-secondary"><i class="fas fa-arrow-right"></i> Get SDK</a></div>
+          <div class="partner-card"><div class="partner-icon"><i class="fas fa-university"></i></div><h3>Galleries & Institutions</h3><p>Enterprise APIs for provenance, curation slots in ARTCORE, museum-grade verification for collections.</p><a href="#contactm" class="btn btn-secondary"><i class="fas fa-arrow-right"></i> Integrate APIs</a></div>
+          <div class="partner-card"><div class="partner-icon"><i class="fas fa-handshake"></i></div><h3>Wallet & Marketplace Partners</h3><p>Integrate with UniSat/Xverse forks. Offer DEX, royalties, and verifiable state to your users.</p><a href="#contact" class="btn btn-secondary"><i class="fas fa-arrow-right"></i> Partner Up</a></div>
         </div>
       </section>
       <!-- Terminal -->
@@ -702,22 +703,52 @@
         </form>
       </section>
       <!-- Footer -->
-      <footer class="footer">
-        <div class="footer-content">
-          <div>
-            <div class="footer-logo"><img src="https://raw.githubusercontent.com/SockIts/ACMEProtocol/385cd1427f319a9285328975afe73dd2f580ec57/assets/Logo.svg" alt="ACME Logo"> ACME Protocol</div>
-            <p>Art Coded on the Monetary Engine: Permanent, verifiable art on Bitcoin's backbone.</p><br>
-            <div class="social-links">
-              <a href="#"><i class="fab fa-twitter"></i></a>
-              <a href="#"><i class="fas fa-globe"></i></a>
-              <a href="#"><i class="fab fa-github"></i></a>
-            </div>
-          </div>
-          <div><h4>Creators</h4><ul><li><a href="#ecosystem">Minting Guide</a></li><li><a href="#ecosystem">Storage Tiers</a></li><li><a href="#ecosystem">Migration Tools</a></li><li><a href="#ecosystem">ARTCORE Curation</a></li><li><a href="#ecosystem">Grants Program</a></li></ul></div>
-          <div><h4>Developers</h4><ul><li><a href="#ecosystem">Documentation</a></li><li><a href="#ecosystem">SDK & APIs</a></li><li><a href="#">Testnet</a></li><li><a href="#">Indexer Specs</a></li><li><a href="#">Bug Bounty</a></li></ul></div>
-          <div><h4>Company</h4><ul><li><a href="#">About</a></li><li><a href="#">Blog</a></li><li><a href="#">Roadmap</a></li><li><a href="#">Team</a></li><li><a href="#contact">Contact</a></li></ul></div>
+<footer class="footer">
+    <div class="footer-content">
+      <div>
+        <div class="footer-logo">
+          <img src="https://raw.githubusercontent.com/SockIts/ACMEProtocol/385cd1427f319a9285328975afe73dd2f580ec57/assets/Logo.svg" alt="ACME Logo">
+          ACME Protocol
         </div>
-      </footer>
+        <p>Art Coded on the Monetary Engine: Permanent, verifiable art on Bitcoin's backbone.</p><br>
+        <div class="social-links">
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fas fa-globe"></i></a>
+          <a href="#"><i class="fab fa-github"></i></a>
+        </div>
+      </div>
+      <div>
+        <h4>Creators</h4>
+        <ul>
+          <li><span>Minting Guide</span></li>
+          <li><span>Storage Tiers</span></li>
+          <li><span>Migration Tools</span></li>
+          <li><span>ARTCORE Curation</span></li>
+          <li><span>Grants Program</span></li>
+        </ul>
+      </div>
+      <div>
+        <h4>Developers</h4>
+        <ul>
+          <li><span>Documentation</span></li>
+          <li><span>SDK & APIs</span></li>
+          <li><span>Testnet</span></li>
+          <li><span>Indexer Specs</span></li>
+          <li><span>Bug Bounty</span></li>
+        </ul>
+      </div>
+      <div>
+        <h4>Company</h4>
+        <ul>
+          <li><span>About</span></li>
+          <li><span>Blog</span></li>
+          <li><span>Roadmap</span></li>
+          <li><span>Team</span></li>
+          <li><span>Contact</span></li>
+        </ul>
+      </div>
+    </div>
+  </footer>
     </main>
   </div>
   <script>
