Update social handle placeholder in contact form

--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@
           <input type="text" name="_gotcha" style="display:none" />
           <div><label for="name">Name</label><input type="text" id="name" name="name" placeholder="Your full name" required></div>
           <div><label for="email">Email</label><input type="email" id="email" name="email" placeholder="you@example.com" required></div>
-          <div><label for="social">Social Handle</label><input type="text" id="social" name="social" placeholder="@btc_socks"></div>
+          <div><label for="social">Social Handle</label><input type="text" id="social" name="social" placeholder="@ACMEonBTC"></div>
           <div><label for="interest">I am interested in</label>
             <select id="interest" name="interest" required>
               <option value="" disabled selected>Select an option</option>
