Update subtitle and footer text to 'Assets Coded'

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
         <div class="hero-content">
           <div class="badge"><i class="fas fa-circle"></i><span>Testnet Live</span></div>
           <h1>ACME Protocol</h1>
-          <p class="subtitle">Art Coded on the Monetary Engine: The Bitcoin-native metaprotocol solving fragmentation, verifiability, and permanence for digital art.</p>
+          <p class="subtitle">Assets Coded on the Monetary Engine: The Bitcoin-native metaprotocol solving fragmentation, verifiability, and permanence for digital art.</p>
           <div class="cta-buttons">
             <a href="#ecosystem" class="btn btn-primary"><i class="fas fa-cubes"></i> Explore Ecosystem</a>
             <a href="#partner" class="btn btn-secondary"><i class="fas fa-handshake"></i> Become a Partner</a>
@@ -710,7 +710,7 @@
           <img src="https://raw.githubusercontent.com/SockIts/ACMEProtocol/385cd1427f319a9285328975afe73dd2f580ec57/assets/Logo.svg" alt="ACME Logo">
           ACME Protocol
         </div>
-        <p>Art Coded on the Monetary Engine: Permanent, verifiable art on Bitcoin's backbone.</p><br>
+        <p>Assets Coded on the Monetary Engine: Permanent, verifiable art on Bitcoin's backbone.</p><br>
         <div class="social-links">
           <a href="#"><i class="fab fa-twitter"></i></a>
           <a href="#"><i class="fas fa-globe"></i></a>
