Update hero section text to reflect digital assets

--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
         <div class="hero-bg"></div>
         <div class="hero-content">
             <h1>
-                The <span class="gradient-text">Future of Art</span><br>
+                The <span class="gradient-text">Future of Digital Assets</span><br>
                 Lives on Bitcoin
             </h1>
             <p class="hero-subtitle">
